@@ -131,7 +131,7 @@ public class SemanticsBuilder {
     private void cleanupBoundaries(ArrayNode surfaces, BoundaryFilter filter, Map<Integer, AbstractThematicSurface> boundaries) {
         List<Map.Entry<Integer, AbstractThematicSurface>> entries = boundaries.entrySet().stream()
                 .filter(e -> !filter.isValidBoundary(e.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!entries.isEmpty()) {
             if (helper.isMapUnsupportedTypesToGenerics()
